plugins/kotlin/idea/tests/testData/gradle/multiplatform/k2/highlighting/jvmMultifileClass/client-source/src/main/java/client/Client.java
//region Test configuration
// - hidden: line markers
//endregion
package client;

import test.*;

public class Client {
    public static void main(String[] args) {
        test(new MyCommonClass(), new MyCommonClassWithActualization(), new IntermediateClassWithActualization(),
                new MyIntermediateClass(), new MyJvmClass());
    }

    public static void test(
            MyCommonClass mcc,
            MyCommonClassWithActualization mccwa,
            IntermediateClassWithActualization icwa,
            MyIntermediateClass mic,
            MyJvmClass mjc
    ) {
        MyFacadeKt.getCommonVariable1();
        MyFacadeKt.getCommonVariable2();
        MyFacadeKt.getIntermediateVariable2();
        MyFacadeKt.getIntermediateVariable2();
        MyFacadeKt.getJvmVariable2();
        MyFacadeKt.getJvmVariable2();
        // Issue: KT-69595, doesn't happen for the version with a binary dependency
        MyFacadeKt.commonFunction1(<!HIGHLIGHTING("severity='ERROR'; descr=''commonFunction1(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.MyCommonClass)''")!>mccwa<!>, mcc);
        MyFacadeKt.commonFunction2(<!HIGHLIGHTING("severity='ERROR'; descr=''commonFunction2(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.MyCommonClass)''")!>mccwa<!>, mcc);
        MyFacadeKt.intermediateFunction1(<!HIGHLIGHTING("severity='ERROR'; descr=''intermediateFunction1(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull IntermediateClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass, test.@org.jetbrains.annotations.NotNull MyIntermediateClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.IntermediateClassWithActualization, test.MyCommonClass, test.MyIntermediateClass)''")!>mccwa<!>, <!HIGHLIGHTING("severity='ERROR'; descr=''intermediateFunction1(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull IntermediateClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass, test.@org.jetbrains.annotations.NotNull MyIntermediateClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.IntermediateClassWithActualization, test.MyCommonClass, test.MyIntermediateClass)''")!>icwa<!>, mcc, <!HIGHLIGHTING("severity='ERROR'; descr=''intermediateFunction1(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull IntermediateClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass, test.@org.jetbrains.annotations.NotNull MyIntermediateClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.IntermediateClassWithActualization, test.MyCommonClass, test.MyIntermediateClass)''")!>mic<!>);
        MyFacadeKt.intermediateFunction2(<!HIGHLIGHTING("severity='ERROR'; descr=''intermediateFunction2(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull IntermediateClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass, test.@org.jetbrains.annotations.NotNull MyIntermediateClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.IntermediateClassWithActualization, test.MyCommonClass, test.MyIntermediateClass)''")!>mccwa<!>, <!HIGHLIGHTING("severity='ERROR'; descr=''intermediateFunction2(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull IntermediateClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass, test.@org.jetbrains.annotations.NotNull MyIntermediateClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.IntermediateClassWithActualization, test.MyCommonClass, test.MyIntermediateClass)''")!>icwa<!>, mcc, <!HIGHLIGHTING("severity='ERROR'; descr=''intermediateFunction2(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull IntermediateClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass, test.@org.jetbrains.annotations.NotNull MyIntermediateClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.IntermediateClassWithActualization, test.MyCommonClass, test.MyIntermediateClass)''")!>mic<!>);
        MyFacadeKt.jvmFunction1(<!HIGHLIGHTING("severity='ERROR'; descr=''jvmFunction1(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull IntermediateClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass, test.@org.jetbrains.annotations.NotNull MyIntermediateClass, test.@org.jetbrains.annotations.NotNull MyJvmClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.IntermediateClassWithActualization, test.MyCommonClass, test.MyIntermediateClass, test.MyJvmClass)''")!>mccwa<!>, <!HIGHLIGHTING("severity='ERROR'; descr=''jvmFunction1(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull IntermediateClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass, test.@org.jetbrains.annotations.NotNull MyIntermediateClass, test.@org.jetbrains.annotations.NotNull MyJvmClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.IntermediateClassWithActualization, test.MyCommonClass, test.MyIntermediateClass, test.MyJvmClass)''")!>icwa<!>, mcc, <!HIGHLIGHTING("severity='ERROR'; descr=''jvmFunction1(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull IntermediateClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass, test.@org.jetbrains.annotations.NotNull MyIntermediateClass, test.@org.jetbrains.annotations.NotNull MyJvmClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.IntermediateClassWithActualization, test.MyCommonClass, test.MyIntermediateClass, test.MyJvmClass)''")!>mic<!>, <!HIGHLIGHTING("severity='ERROR'; descr=''jvmFunction1(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull IntermediateClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass, test.@org.jetbrains.annotations.NotNull MyIntermediateClass, test.@org.jetbrains.annotations.NotNull MyJvmClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.IntermediateClassWithActualization, test.MyCommonClass, test.MyIntermediateClass, test.MyJvmClass)''")!>mjc<!>);
        MyFacadeKt.jvmFunction2(<!HIGHLIGHTING("severity='ERROR'; descr=''jvmFunction2(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull IntermediateClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass, test.@org.jetbrains.annotations.NotNull MyIntermediateClass, test.@org.jetbrains.annotations.NotNull MyJvmClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.IntermediateClassWithActualization, test.MyCommonClass, test.MyIntermediateClass, test.MyJvmClass)''")!>mccwa<!>, <!HIGHLIGHTING("severity='ERROR'; descr=''jvmFunction2(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull IntermediateClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass, test.@org.jetbrains.annotations.NotNull MyIntermediateClass, test.@org.jetbrains.annotations.NotNull MyJvmClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.IntermediateClassWithActualization, test.MyCommonClass, test.MyIntermediateClass, test.MyJvmClass)''")!>icwa<!>, mcc, <!HIGHLIGHTING("severity='ERROR'; descr=''jvmFunction2(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull IntermediateClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass, test.@org.jetbrains.annotations.NotNull MyIntermediateClass, test.@org.jetbrains.annotations.NotNull MyJvmClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.IntermediateClassWithActualization, test.MyCommonClass, test.MyIntermediateClass, test.MyJvmClass)''")!>mic<!>, <!HIGHLIGHTING("severity='ERROR'; descr=''jvmFunction2(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull IntermediateClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass, test.@org.jetbrains.annotations.NotNull MyIntermediateClass, test.@org.jetbrains.annotations.NotNull MyJvmClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.IntermediateClassWithActualization, test.MyCommonClass, test.MyIntermediateClass, test.MyJvmClass)''")!>mjc<!>);

        MyFacadeKt.commonFunctionWithActualization(<!HIGHLIGHTING("severity='ERROR'; descr=''commonFunctionWithActualization(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.MyCommonClass)''")!>mccwa<!>, mcc);
        MyFacadeKt.intermediateFunctionWithActualization(<!HIGHLIGHTING("severity='ERROR'; descr=''intermediateFunctionWithActualization(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull IntermediateClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass, test.@org.jetbrains.annotations.NotNull MyIntermediateClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.IntermediateClassWithActualization, test.MyCommonClass, test.MyIntermediateClass)''")!>mccwa<!>, <!HIGHLIGHTING("severity='ERROR'; descr=''intermediateFunctionWithActualization(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull IntermediateClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass, test.@org.jetbrains.annotations.NotNull MyIntermediateClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.IntermediateClassWithActualization, test.MyCommonClass, test.MyIntermediateClass)''")!>icwa<!>, mcc, <!HIGHLIGHTING("severity='ERROR'; descr=''intermediateFunctionWithActualization(test.@org.jetbrains.annotations.NotNull MyCommonClassWithActualization, test.@org.jetbrains.annotations.NotNull IntermediateClassWithActualization, test.@org.jetbrains.annotations.NotNull MyCommonClass, test.@org.jetbrains.annotations.NotNull MyIntermediateClass)' in 'test.MyFacadeKt' cannot be applied to '(test.MyCommonClassWithActualization, test.IntermediateClassWithActualization, test.MyCommonClass, test.MyIntermediateClass)''")!>mic<!>);
        MyFacadeKt.getCommonVariableWithActualization();
        MyFacadeKt.getIntermediateVariableWithActualization();
    }
}
